fix swagger output for login route
